compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__custom_types__imported_multiple_fields.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
assertion_line: 390
expression: "import other\npub fn main() {\n  other.Two(b: 2, c: 3, a: 1)\n}"
---
----- SOURCE CODE
import other
pub fn main() {
  other.Two(b: 2, c: 3, a: 1)
}

----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";

export function main() {
  return new $other.Two(1, 2, 3);
}
