compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__custom_types__imported_pattern.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
assertion_line: 606
expression: "import other.{Two}\n\npub fn main(x) {\n  case x {\n    Two(a: 1, ..) -> 1\n    other.Two(b: 2, c: c, ..) -> c\n    _ -> 3\n  }\n}\n"
---
----- SOURCE CODE
import other.{Two}

pub fn main(x) {
  case x {
    Two(a: 1, ..) -> 1
    other.Two(b: 2, c: c, ..) -> c
    _ -> 3
  }
}


----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";
import { Two } from "../other.mjs";

export function main(x) {
  if (x instanceof Two && x.a === 1) {
    return 1;
  } else if (x instanceof $other.Two && x.b === 2) {
    let c = x.c;
    return c;
  } else {
    return 3;
  }
}
