compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__custom_types__imported_using_label.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
assertion_line: 375
expression: "import other\npub fn main() {\n  other.Two(field: 1)\n}"
---
----- SOURCE CODE
import other
pub fn main() {
  other.Two(field: 1)
}

----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";

export function main() {
  return new $other.Two(1);
}
