compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__custom_types__long_name_variant_mixed_labels_typescript.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
assertion_line: 225
expression: "\npub record TypeWithALongNameAndSeveralArguments{\n  TypeWithALongNameAndSeveralArguments(String, String, String, a: String, b: String)\n}\n\npub const local = TypeWithALongNameAndSeveralArguments(\"one\", \"two\", \"three\", \"four\", \"five\")\n"
---
----- SOURCE CODE

pub record TypeWithALongNameAndSeveralArguments{
  TypeWithALongNameAndSeveralArguments(String, String, String, a: String, b: String)
}

pub const local = TypeWithALongNameAndSeveralArguments("one", "two", "three", "four", "five")


----- TYPESCRIPT DEFINITIONS
import type * as _ from "../rakun.d.mts";

export class TypeWithALongNameAndSeveralArguments extends _.CustomType {
  constructor(
    argument$0: string,
    argument$1: string,
    argument$2: string,
    a: string,
    b: string
  );
  
  0: string;
  1: string;
  2: string;
  a: string;
  b: string;
}

export type TypeWithALongNameAndSeveralArguments$ = TypeWithALongNameAndSeveralArguments;

export const local: TypeWithALongNameAndSeveralArguments$;
