compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__custom_types__long_name_variant_without_labels.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
expression: "\nrecord TypeWithALongNameAndSeveralArguments{\n  TypeWithALongNameAndSeveralArguments(String, String, String, String, String)\n}\n\n\nfn go() {\n  TypeWithALongNameAndSeveralArguments\n}\n"
---
----- SOURCE CODE

record TypeWithALongNameAndSeveralArguments{
  TypeWithALongNameAndSeveralArguments(String, String, String, String, String)
}


fn go() {
  TypeWithALongNameAndSeveralArguments
}


----- COMPILED JAVASCRIPT
import { CustomType as $CustomType } from "../rakun.mjs";

class TypeWithALongNameAndSeveralArguments extends $CustomType {
  constructor(x0, x1, x2, x3, x4) {
    super();
    this[0] = x0;
    this[1] = x1;
    this[2] = x2;
    this[3] = x3;
    this[4] = x4;
  }
}

function go() {
  return (var0, var1, var2, var3, var4) => {
    return new TypeWithALongNameAndSeveralArguments(
      var0,
      var1,
      var2,
      var3,
      var4,
    );
  };
}
