compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__custom_types__new_type_import_syntax.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
assertion_line: 685
expression: "\nimport a.{type A, A}\n\npub fn main() {\n  A\n}\n"
---
----- SOURCE CODE

import a.{type A, A}

pub fn main() {
  A
}


----- COMPILED JAVASCRIPT
import * as $a from "../../package/a.mjs";
import { A } from "../../package/a.mjs";

export function main() {
  return new A();
}
