compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__custom_types__qualified.snap
---
source: compiler-core/src/javascript/tests/custom_types.rs
assertion_line: 637
expression: "import other\n\npub fn main() {\n  other.One\n}\n"
---
----- SOURCE CODE
import other

pub fn main() {
  other.One
}


----- COMPILED JAVASCRIPT
import * as $other from "../other.mjs";

export function main() {
  return new $other.One();
}
